# setopy

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cpp
include/: Example.h  IAlgorithm.h  IStamp.h
src/: CMakeLists.txt
